[gd_scene load_steps=18 format=4 uid="uid://0i31f8vq3n8d"]

[ext_resource type="PackedScene" uid="uid://bo3l4u1r88umk" path="res://scenes/TileMaps/platforms.tscn" id="1_2c06d"]
[ext_resource type="Script" uid="uid://c1se4og3iiy1p" path="res://scenes/LabProg/lab_prog.gd" id="1_8xgch"]
[ext_resource type="PackedScene" uid="uid://cstxmmd7y76qu" path="res://scenes/enemies/mob1.tscn" id="2_0eih3"]
[ext_resource type="PackedScene" uid="uid://qbgt78ak72da" path="res://scenes/NPC/npc.tscn" id="2_ytk81"]
[ext_resource type="Texture2D" uid="uid://bwwv3sdfgdkva" path="res://assets/labprog.png" id="3_g7ewm"]
[ext_resource type="Texture2D" uid="uid://dekln4wevnx5x" path="res://assets/scenery/props/pixelarium_bg.png" id="4_3bi58"]
[ext_resource type="Texture2D" uid="uid://c7a8o7u0bposy" path="res://assets/scenery/props/monitor.png" id="5_dplbf"]
[ext_resource type="Texture2D" uid="uid://bqriefnowsh07" path="res://assets/scenery/props/solo_desk.png" id="5_tb8ri"]
[ext_resource type="Texture2D" uid="uid://f75som2f7cdd" path="res://assets/scenery/props/screen.png" id="6_0gwk4"]
[ext_resource type="Texture2D" uid="uid://cg2h21u37hlw" path="res://assets/scenery/props/chair.png" id="6_dplbf"]
[ext_resource type="Texture2D" uid="uid://dbelehko8hblu" path="res://assets/scenery/props/desktop.png" id="11_8f0hp"]
[ext_resource type="Texture2D" uid="uid://bajggt1affl06" path="res://assets/arrow_go.png" id="12_2hifo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2c06d"]
size = Vector2(608, 448)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ytk81"]
size = Vector2(8, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_56vj1"]
atlas = ExtResource("12_2hifo")
region = Rect2(0, 0, 160, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_nexd5"]
atlas = ExtResource("12_2hifo")
region = Rect2(160, 0, 160, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_eub12"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_56vj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nexd5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="LabProg" type="Node2D" node_paths=PackedStringArray("collisionArea", "next_wall_collision")]
script = ExtResource("1_8xgch")
bugs_scene = ExtResource("2_0eih3")
title_area = "Laboratório de Programação"
image = ExtResource("3_g7ewm")
collisionArea = NodePath("AreaDetect/CollisionShape2D")
next_wall_collision = NodePath("NextWall/CollisionShape2D")

[node name="Props" type="Node2D" parent="."]

[node name="PixelariumBg" type="Sprite2D" parent="Props"]
position = Vector2(320, 240)
texture = ExtResource("4_3bi58")

[node name="Monitor" type="Sprite2D" parent="Props"]
position = Vector2(228, 371)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_dplbf")

[node name="Monitor2" type="Sprite2D" parent="Props"]
position = Vector2(375, 371)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_dplbf")
flip_h = true

[node name="Screen" type="Sprite2D" parent="Props"]
position = Vector2(420, 370)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_0gwk4")
flip_h = true

[node name="Screen2" type="Sprite2D" parent="Props"]
position = Vector2(274, 370)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_0gwk4")
flip_h = true

[node name="SoloDesk" type="Sprite2D" parent="Props"]
position = Vector2(245, 420)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_tb8ri")

[node name="SoloDesk2" type="Sprite2D" parent="Props"]
position = Vector2(388, 419)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_tb8ri")

[node name="Chair" type="Sprite2D" parent="Props"]
position = Vector2(257, 412)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_dplbf")

[node name="Chair2" type="Sprite2D" parent="Props"]
position = Vector2(373, 412)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_dplbf")
flip_h = true

[node name="Desktop" type="Sprite2D" parent="Props"]
position = Vector2(303, 424)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_8f0hp")

[node name="Desktop2" type="Sprite2D" parent="Props"]
position = Vector2(446, 424)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_8f0hp")
flip_h = true

[node name="Tiles" type="Node2D" parent="."]

[node name="platforms" parent="Tiles" instance=ExtResource("1_2c06d")]
tile_map_data = PackedByteArray("AAAAABwACAAAAAQAAAABABwACAABAAQAAAACABwACAABAAQAAAADABwACAABAAQAAAAEABwACAABAAQAAAAFABwACAABAAQAAAAGABwACAABAAQAAAAHABwACAABAAQAAAAIABwACAABAAQAAAAJABwACAABAAQAAAAKABwACAABAAQAAAALABwACAABAAQAAAAMABwACAABAAQAAAANABwACAABAAQAAAAOABwACAABAAQAAAAPABwACAABAAQAAAAQABwACAABAAQAAAARABwACAABAAQAAAASABwACAABAAQAAAATABwACAABAAQAAAAUABwACAABAAQAAAAVABwACAABAAQAAAAWABwACAABAAQAAAAXABwACAABAAQAAAAYABwACAABAAQAAAAZABwACAABAAQAAAAaABwACAABAAQAAAAbABwACAABAAQAAAAcABwACAABAAQAAAAdABwACAABAAQAAAAeABwACAABAAQAAAAfABwACAABAAQAAAAgABwACAABAAQAAAAhABwACAABAAQAAAAiABwACAABAAQAAAAjABwACAABAAQAAAAkABwACAABAAQAAAAlABwACAABAAQAAAAmABwACAABAAQAAAAnABwACAACAAQAAAAnAB0ACAACAAUAAAAnAB4ACAACAAUAAAAAAB0ACAAAAAUAAAAAAB4ACAAAAAUAAAABAB0ACAABAAUAAAACAB0ACAABAAUAAAADAB0ACAABAAUAAAAEAB0ACAABAAUAAAAFAB0ACAABAAUAAAAGAB0ACAABAAUAAAAHAB0ACAABAAUAAAAIAB0ACAABAAUAAAAJAB0ACAABAAUAAAAKAB0ACAABAAUAAAALAB0ACAABAAUAAAAMAB0ACAABAAUAAAANAB0ACAABAAUAAAAOAB0ACAABAAUAAAAPAB0ACAABAAUAAAAQAB0ACAABAAUAAAARAB0ACAABAAUAAAASAB0ACAABAAUAAAATAB0ACAABAAUAAAAUAB0ACAABAAUAAAAVAB0ACAABAAUAAAAWAB0ACAABAAUAAAAXAB0ACAABAAUAAAAYAB0ACAABAAUAAAAZAB0ACAABAAUAAAAaAB0ACAABAAUAAAAbAB0ACAABAAUAAAAcAB0ACAABAAUAAAAdAB0ACAABAAUAAAAeAB0ACAABAAUAAAAfAB0ACAABAAUAAAAgAB0ACAABAAUAAAAhAB0ACAABAAUAAAAiAB0ACAABAAUAAAAjAB0ACAABAAUAAAAkAB0ACAABAAUAAAAlAB0ACAABAAUAAAAmAB0ACAABAAUAAAAmAB4ACAABAAUAAAAlAB4ACAABAAUAAAAkAB4ACAABAAUAAAAjAB4ACAABAAUAAAAiAB4ACAABAAUAAAAhAB4ACAABAAUAAAAgAB4ACAABAAUAAAAfAB4ACAABAAUAAAAeAB4ACAABAAUAAAAdAB4ACAABAAUAAAAcAB4ACAABAAUAAAAbAB4ACAABAAUAAAAaAB4ACAABAAUAAAAZAB4ACAABAAUAAAAYAB4ACAABAAUAAAAXAB4ACAABAAUAAAAWAB4ACAABAAUAAAAVAB4ACAABAAUAAAAUAB4ACAABAAUAAAATAB4ACAABAAUAAAASAB4ACAABAAUAAAARAB4ACAABAAUAAAAQAB4ACAABAAUAAAAPAB4ACAABAAUAAAAOAB4ACAABAAUAAAANAB4ACAABAAUAAAAMAB4ACAABAAUAAAALAB4ACAABAAUAAAAKAB4ACAABAAUAAAAJAB4ACAABAAUAAAAIAB4ACAABAAUAAAAHAB4ACAABAAUAAAAGAB4ACAABAAUAAAAFAB4ACAABAAUAAAAEAB4ACAABAAUAAAADAB4ACAABAAUAAAACAB4ACAABAAUAAAABAB4ACAABAAUAAAA=")

[node name="AreaDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetect"]
position = Vector2(320, 224)
shape = SubResource("RectangleShape2D_2c06d")

[node name="NPC" parent="." instance=ExtResource("2_ytk81")]
position = Vector2(128, 448)
timeline_name = "03_labprog"

[node name="NextWall" type="StaticBody2D" parent="."]
position = Vector2(648, -4)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextWall"]
position = Vector2(-12, 228)
shape = SubResource("RectangleShape2D_ytk81")

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnPoints"]
position = Vector2(322, -60)

[node name="Marker2D2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(130, -60)

[node name="Marker2D3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(514, -60)

[node name="Marker2D4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(448, -128)

[node name="Marker2D5" type="Marker2D" parent="SpawnPoints"]
position = Vector2(192, -128)

[node name="Marker2D6" type="Marker2D" parent="SpawnPoints"]
position = Vector2(320, -128)

[node name="Arrow_Go" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(544, 208)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_eub12")
autoplay = "default"

[connection signal="body_entered" from="AreaDetect" to="." method="_on_area_detect_body_entered"]
[connection signal="ended_talking" from="NPC" to="." method="_on_npc_ended_talking"]
[connection signal="start_talking" from="NPC" to="." method="_on_npc_start_talking"]
